# leopard44-kb

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.bat  setup.sh  start.bat  start.command
deploy/: leopard44-kb.service
schema/: 001_init.sql  002_inventory.sql  003_schematic_image.sql  004_deviations.sql
scripts/: __init__.py  setup_core.py
shared/: README.md
shared/leopard44/: bluewater-capability.md  competitive-comparison.md  ex-charter-buying-guide.md  interior-layout.md  known-issues.md  market-value.md  onboard-systems.md  sailing-performance.md  technical-specifications.md  upgrades-modifications.md
src/leopard44_kb/: __init__.py  alias.py  answer.py  cli.py  config.py  deviation.py  inventory.py  log.py  maintenance.py  migrate.py  paths.py  retrieve.py  schema.py  schematic.py  sources.py  store.py  stt_worker.py
src/leopard44_kb/capture/: __init__.py  confirm.py  photo.py  vision.py
src/leopard44_kb/ingest/: __init__.py  embedder.py  pdf.py  text_md.py  whatsapp.py  writer.py
src/leopard44_kb/web/: __init__.py  app.py
src/leopard44_kb/web/static/: app.css  (+2 more)
tests/: _corpus.py  conftest.py  test_answer.py  test_capture_cli.py  test_capture_confirm.py  test_capture_import_boundary.py  test_capture_photo.py  test_capture_uat_presence.py  test_capture_vision.py  test_config.py  test_deploy.py  test_deviation.py  test_deviation_cli.py  test_deviation_highlight.py  test_ingest_batch.py  test_ingest_cli.py  test_ingest_embedder.py  test_ingest_pdf.py  test_ingest_reingest.py  test_ingest_text_md.py  test_ingest_whatsapp.py  test_install_data_dirs.py  test_install_setup.py  test_inventory.py  test_inventory_cli.py  test_maintenance.py  test_maintenance_cli.py  test_migrate.py  test_openrouter_backend.py  test_paths.py  test_precommit_hook.py  test_query_cli.py  test_query_live.py  test_retrieve.py  test_schema.py  test_schematic.py  test_shared_layout.py  test_sources_cli.py  test_store.py  test_stt_worker.py  (+9 more)
tests/e2e/: conftest.py  test_phase9_canvas_overlay.py  test_web_ui.py  uat_phase11_headed.py  uat_phase9_headed.py
tests/fixtures/: _build_fixtures.py  sample_chat_ampm.txt  sample_chat_android.txt  sample_chat_edge.txt  sample_chat_euro.txt  sample_chat_ios.txt  sample_chat_us.txt  sample_maintenance_entry.md  sample_note.md  short_marine_query.webm  valid_container.webm
(+5 files in other folders)
